# clarityvr

clarity_api/api_server/: Cargo.toml  how_it_works.txt
clarity_api/api_server/sql/: create_mysql.sql
clarity_api/api_server/src/: main.rs
clarity_portal/: Gemfile  gen.sh
clarity_portal/app/controllers/: patients_controller.rb
clarity_portal/app/models/: biometric.rb  patient.rb  recording.rb  session.rb
clarity_portal/app/views/layouts/: application.html.erb  application_old.html.erb
clarity_portal/app/views/patients/: _form.html.erb  _patient.json.jbuilder  index.html.erb  show.html.erb
clarity_portal/config/: application.rb  database.yml  routes.rb  secrets.yml
clarity_portal/config/environments/: production.rb
clarity_portal/config/initializers/: session_store.rb
clarity_portal/db/: schema.rb
clarity_portal/db/migrate/: 20170113004044_create_users.rb  20170113004045_create_sessions.rb  20170113004046_create_biometrics.rb  20170113004047_create_recordings.rb  20170113004916_create_patients.rb
clarity_portal/test/controllers/: patients_controller_test.rb
clarity_portal/test/fixtures/: biometrics.yml  patients.yml  recordings.yml  sessions.yml  users.yml
